# c_programming_test

c_programming_test/: build.sh  clean.sh
c_programming_test/cmake_build/: CMakeCache.txt  Makefile  arrays.ex1  cmake_install.cmake  functions.ex1  pointers.ex1
c_programming_test/make_build/: main  main.c  main1  main1.c  makefile
c_programming_test/src/: CMakeLists.txt
c_programming_test/src/arrays/: ex1.c
c_programming_test/src/functions/: ex2.c
c_programming_test/src/pointers/: ex3.c
